updated banner src link

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <h1 class="titulo">Preços de <strong>Black Friday</strong> em todos os Cursos</h1>
                     <a href="#" class="ofertas">Conferir Agora</a>
                 </div>
-                <img src="/assets/BannerPrincipal.jpg" alt="Banner">
+                <img src="https://i.imgur.com/2IsXfLO.jpg" alt="Banner">
             </div>
 
             <div class="services">
